# jci-senior-executive-director-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
app/: __init__.py  admin_api.py  attendance.py  audit.py  config.py  dashboard.py  delivery.py  deps.py  drive.py  drive_import.py  events.py  firestore_repo.py  format_check.py  guardrails.py  home.py  invite.py  kpi.py  line_messages.py  line_push.py  llm.py  main.py  member_menu.py  members_view.py  models.py  proposals_api.py  reminders.py  repository.py  requirements.txt  rich_menu.py  roster_import.py  summary.py
docs/: dashboard-design.md  drive-analysis.md  mvp-design.md  requirements.md  runbook.md
scripts/: deploy.sh  import_roster.py  setup_rich_menu.py
tests/: conftest.py  test_admin_api.py  test_api_foundation.py  test_approval.py  test_attendance.py  test_dashboard.py  test_delivery_logs.py  test_drive_import.py  test_format_check.py  test_guardrails.py  test_home.py  test_integration.py  test_invite.py  test_kpi.py  test_line_messages.py  test_llm_review.py  test_member_menu.py  test_members_view.py  test_models.py  test_proposals.py  test_reminders.py  test_repository.py  test_rich_menu.py  test_roster_import.py  test_tick.py  test_webhook.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/: Card.tsx
web/src/pages/: Agent.tsx  Events.tsx  Home.tsx  Members.tsx  Proposals.tsx  Settings.tsx
