[project]
name = "jci-sed-agent"
version = "0.0.1"
description = "JCI 専務理事AIエージェント (MVP: 出欠自動化)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "scripts/_fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI の Depends(...) デフォルト引数を許容

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
